--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.smdproj.automobuy" >
+    package="com.smdproj.automobuy">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AutomoBuy" >
+        android:theme="@style/Theme.AutomoBuy">
+        <activity
+            android:name=".Feedback"
+            android:exported="false" />
         <activity
             android:name=".TestDriveRegistration"
             android:exported="true" />
@@ -23,7 +26,7 @@
             android:exported="true" />
         <activity
             android:name=".Home"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
