--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,25 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AutomoBuy">
+        android:theme="@style/Theme.AutomoBuy"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".D_D_View_Forms"
+            android:exported="false" />
+        <activity
+            android:name=".D_D_View_Customers"
+            android:exported="false" />
+        <activity
+            android:name=".D_D_Manage"
+            android:exported="false" />
+        <activity
+            android:name=".Dealer_Dashboard"
+            android:exported="false" />
         <activity
             android:name=".Feedback"
             android:exported="false" />
